test/samples/invalid/tc/casts.maruir
fun main()
locals
	a: u16,
	b: i16;
{
	entry:
		b := i16(false);

		assert b == -32768_i16;
		return;
}
